# Main_Source_Rigister

./: .gitignore  README.md  app_runtime.py  build_source_exes.bat  build_source_installers.bat  config.example.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  register.bat  register_full_installer.iss  register_only.py  register_only.spec  register_only_installer.iss  register_success.py  register_success.spec  requirements-build.txt  requirements-dev.txt  requirements.txt  run_register_full.bat  run_register_only.bat
.github/workflows/: build-desktop.yml
scripts/: build-desktop.mjs  build-server-binary.mjs  build_binaries.py  check-release-workflow.mjs  check-web-syntax.mjs  check-workflow.mjs  check_web_syntax.py  check_workflow.py  common.mjs  package_desktop.py  release-config.mjs  release-cross-platform-dedicated.ps1  release-cross-platform.ps1  release_utils.py  smoke-test.mjs  typecheck-python.mjs  verify-desktop.mjs  verify_desktop.py
scripts/lib/: release-utils.mjs
